# zeroclaw-android

./: .gitmodules  README.md
.github/workflows/: ci.yml  pr-auto-close.yml  upstream-sync.yml
ZeroClaw-Android-main/: .editorconfig  .gitignore  LICENSE  README.md  agents.md.default  build.gradle.kts  settings.gradle.kts
ZeroClaw-Android-main/.github/workflows/: release.yml
ZeroClaw-Android-main/app/schemas/com.zeroclaw.android.data.local.ZeroClawDatabase/: 10.json  3.json  5.json  6.json  7.json  (+1 more)
ZeroClaw-Android-main/lib/: build.gradle.kts
ZeroClaw-Android-main/maestro/config/: test-config.toml
ZeroClaw-Android-main/maestro/flows/: console-interaction.yaml  daemon-lifecycle.yaml  error-recovery.yaml  onboarding.yaml  settings-roundtrip.yaml
ZeroClaw-Android-main/maestro/subflows/: navigate-to-tab.yaml  start-daemon.yaml
ZeroClaw-Android-main/zeroclaw-android/: deny.toml
ZeroClaw-Android-main/zeroclaw-android/.cargo/: config.toml.template
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.zeroclaw.android.data.local.ZeroClawDatabase/: 1.json  11.json  2.json  4.json  9.json
config/detekt/: detekt.yml
gradle/: libs.versions.toml
lib/: consumer-rules.pro
maestro/flows/: agent-management.yaml  plugin-browsing.yaml
maestro/flows/real-daemon/: conversation.yaml
maestro/subflows/: complete-onboarding.yaml
zeroclaw-android/: Cargo.toml
zeroclaw-android/zeroclaw-ffi/: Cargo.toml
zeroclaw-android/zeroclaw-ffi/src/: error.rs  estop.rs  events.rs  ffi_health.rs  gateway_client.rs  memory_browse.rs  runtime.rs  types.rs  url_helpers.rs
(+339 files in other folders)
